app/components/pipeline/settings/main/styles.scss
@use 'screwdriver-colors' as colors;
@use 'variables';

@use 'modal/pipeline/styles' as pipelineModal;
@use 'modal/pipeline-alias/styles' as pipelineAliasModal;
@use 'modal/sonar-badge/styles' as sonarBadgeModal;

@mixin styles {
  @include pipelineModal.styles;
  @include pipelineAliasModal.styles;
  @include sonarBadgeModal.styles;

  #pipeline-settings-main-tab-contents {
    .section {
      display: flex;
      align-items: center;
      justify-content: space-between;

      .text-container {
        .configuration {
          margin-top: 0.5rem;
          margin-left: 1rem;
          font-style: italic;
        }

        .pipeline-admin-description {
          display: flex;
          align-items: center;

          svg {
            margin: 0 0.25rem;
          }
        }

        .pipeline-admin-list {
          font-weight: variables.$weight-bold;
          margin-left: 1rem;
          margin-bottom: 1rem;
          max-height: 5rem;
          overflow: auto;

          &:last-child {
            margin-bottom: 0;
          }
        }
      }

      button {
        margin-right: 1rem;
      }

      &.pipeline-settings-danger-zone {
        border-color: colors.$sd-warn-bg;
      }
    }
  }
}

